# AbstractControls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindSDL2.cmake
dep/: README-SDL.md  README.md
dep/tpunitpp/: tpunit++.hpp
impl/: CMakeLists.txt
impl/sdl2/: CMakeLists.txt
impl/sdl2/inc/: sdl2axis.hpp  sdl2ball.hpp  sdl2button.hpp  sdl2hat.hpp  sdl2joystick.hpp  sdlaxis.hpp  sdlball.hpp  sdlbutton.hpp  sdlhat.hpp  sdljoystick.hpp
impl/sdl2/src/: CMakeLists.txt  sdl2axis.cpp  sdl2ball.cpp  sdl2button.cpp  sdl2hat.cpp  sdl2joystick.cpp  sdlaxis.cpp  sdlball.cpp  sdlbutton.cpp  sdlhat.cpp  sdljoystick.cpp
impl/sdl2/test/: CMakeLists.txt  demo.cpp  test.cpp  test_SDL2Joystick.cpp  test_SDLJoystick.cpp
inc/: axis.hpp  ball.hpp  button.hpp  controlmanager.hpp  hat.hpp  joystick.hpp  vector.hpp
src/: CMakeLists.txt  controlmanager.cpp  joystick.cpp  vector.cpp
test/: test.hpp
